kubernetes/ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wandelen-ui
  name: wandelen-ui
spec:
  ports:
    - name: 8999-80
      port: 8999
      protocol: TCP
      targetPort: 80
  selector:
    app: wandelen-ui
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wandelen-ui
  name: wandelen-ui
  namespace: wandelen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wandelen-ui
  template:
    metadata:
      labels:
        app: wandelen-ui
    spec:
      containers:
      - image: rloman/wandelen_ui:latest
        name: wandelen-ui-bg799
        ports:
        - containerPort: 80
