kubernetes/wandelen-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wandelen-api
  namespace: wandelen
  labels:
    app: wandelen-api
spec:
  type: ClusterIP
  selector:
    app: wandelen-api
  ports:
  - port: 8080
    targetPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wandelen-api
  namespace: wandelen
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wandelen-api
  template:
     metadata:
        labels:
           app: wandelen-api
     spec:
       containers:
       - name: api
         image: rloman/wandelen_api:latest
         ports:
         - containerPort: 8080
         startupProbe:
           httpGet:
             path: /api/wandelings
             port: 8080
           initialDelaySeconds: 30 # Default 0, time before the very first check
           timeoutSeconds: 3 # Default 1, the call may last at most 2 seconds
           failureThreshold: 3
           periodSeconds: 30
         livenessProbe:
           initialDelaySeconds: 3 # Default 0, time before the very first check
           exec:
             command:
             - ls
             - /app.jar
         readinessProbe:
           httpGet:
             path: /api/wandelings
             port: 8080
           initialDelaySeconds: 30 # Default 0, time before the very first check
           periodSeconds: 30 # Default 10, checks every 10 seconds
           timeoutSeconds: 3 # Default 1, the call may last at most 2 seconds
           successThreshold: 1 # Default 1, after a failure this is the minimum successful calls before the api should be considered ready (again)
           failureThreshold: 3 # Default 3, after a success this is the minim unsuccessful calls before the api should be considered failing
