kubernetes/wandelen-ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wandelen-ui
  namespace: wandelen
  labels:
    app: wandelen-ui
spec:
  type: ClusterIP
  selector:
    app: wandelen-ui
  ports:
    - name: 8080-80
      port: 
      protocol: TCP
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wandelen-ui
  name: wandelen-ui
  namespace: wandelen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wandelen-ui
  template:
    metadata:
      labels:
        app: wandelen-ui
    spec:
      containers:
      - image: rloman/wandelen_ui:latest
        name: ui
        ports:
        - containerPort: 80
