kubernetes/ingress-wandelen-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wandelen-ui
  namespace: wandelen
spec:
  ingressClassName: nginx
  rules:
    - host: ui.wandelen.acme.local
      http:
        paths:
          - backend:
              service:
                name: wandelen-ui
                port:
                  number: 8999
            path: /
            pathType: Prefix
