kubernetes/ingress-wandelen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wandelen
  namespace: wandelen
spec:
  ingressClassName: nginx
  rules:
    - host: wandelen.acme.local
      http:
        paths:
          - backend:
              service:
                name: wandelen
                port:
                  number: 8080
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: wandelen-ui
                port:
                  number: 8999
            path: /
            pathType: Prefix
